@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4372 2004/01/06 15:45:56 wiz Exp $
+$NetBSD: CHANGES,v 1.4373 2004/01/06 15:53:41 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -77,3 +77,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated xlockmore to 5.11.1 [hubertf 2004-01-06]
 	Added chmlib-0.31 [wiz 2004-01-06]
 	Added xchm-0.8 [wiz 2004-01-06]
+	Updated pkg_install to 20040106 [hubertf 2004-01-06]
